# datatalks-llm-zoomcamp

./: .gitignore  README.md  example.env  pyproject.toml
01-agentic-rag/: db-rag.ipynb  homework.ipynb  lab.ipynb  lab2.ipynb  rag_helper.py  sqlite-ingest.ipynb
